--- a/portfolio.html
+++ b/portfolio.html
@@ -32,10 +32,23 @@
                     </ul>
                 </nav>
                 <ul class="auth-nav">
-                    <li class="auth-nav-item"><a class="auth-nav-link" href="">info@devstudio.com</a></li>
-                    <li class="auth-nav-item"><a class="auth-nav-link" href="">+38 096 111 11 11</a></li>
+                    <li class="auth-nav-item">
+                        <a class="auth-nav-link" href="" info@devstudio.com>
+                            <svg class="btn-mail" width="16px" height="12px">
+                                <use href="./images/sprite.omg.svg#icon-mail"></use>
+                            </svg>
+                            info@devstudio.com</a
+                        >
+                    </li>
+                    <li class="auth-nav-item">
+                        <a class="auth-nav-link" href="">
+                            <svg class="btn-phone" width="10px" height="16px">
+                                <use href="./images/sprite.omg.svg#icon-smartphone"></use>
+                            </svg>
+                            +38 096 111 11 11</a
+                        >
+                    </li>
                 </ul>
-            </div>
         </header>
 
         <main>
@@ -135,9 +148,9 @@
             </section>
         </main>
         <!-- footer -->
-        <footer class="section-last">
-            <div class="container">
-                <div class="footer-card">
+<footer class="section-last">
+            <div class="container container-footer">
+                <div class="footer-card-left">
                     <a class="logo" href="./index.html">Web<span class="accent-secondary">Studio</span></a>
                     <ul class="footer-raws">
                         <li class="footer-list">
@@ -148,6 +161,39 @@
                         </li>
                         <li class="footer-list">
                             <a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-card-right">
+                    <h3 class="footer-title2">присоединяйтесь</h3>
+                    <ul class="social-list">
+                        <li class="social-item footer-social-item">
+                            <a class="footer-social-link" href="">
+                                <svg class="social-logo" width="20px" height="20px">
+                                    <use href="./images/sprite.omg.svg#icon-s1instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item footer-social-item">
+                            <a class="footer-social-link" href="">
+                                <svg class="social-logo" width="20px" height="20px">
+                                    <use href="./images/sprite.omg.svg#icon-s2twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item footer-social-item">
+                            <a class="footer-social-link" href="">
+                                <svg class="social-logo" width="20px" height="20px">
+                                    <use href="./images/sprite.omg.svg#icon-s3facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item footer-social-item">
+                            <a class="footer-social-link" href="">
+                                <svg class="social-logo" width="20px" height="20px">
+                                    <use href="./images/sprite.omg.svg#icon-s4linkedin"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
                 </div>
