--- a/index.html
+++ b/index.html
@@ -30,8 +30,22 @@
                     </ul>
                 </nav>
                 <ul class="auth-nav">
-                    <li class="auth-nav-item"><a class="auth-nav-link" href="">info@devstudio.com</a></li>
-                    <li class="auth-nav-item"><a class="auth-nav-link" href="">+38 096 111 11 11</a></li>
+                    <li class="auth-nav-item">
+                        <a class="auth-nav-link" href="" info@devstudio.com>
+                            <svg class="btn-mail" width="16px" height="12px">
+                                <use href="./images/sprite.omg.svg#icon-mail"></use>
+                            </svg>
+                            info@devstudio.com</a
+                        >
+                    </li>
+                    <li class="auth-nav-item">
+                        <a class="auth-nav-link" href="">
+                            <svg class="btn-phone" width="10px" height="16px">
+                                <use href="./images/sprite.omg.svg#icon-smartphone"></use>
+                            </svg>
+                            +38 096 111 11 11</a
+                        >
+                    </li>
                 </ul>
             </div>
         </header>
@@ -48,24 +62,44 @@
                 <div class="container">
                     <ul class="feature-list">
                         <li>
+                            <div class="feature-iconbox">
+                                <svg class="feature-icon" width="70px" height="70px">
+                                    <use href="./images/sprite.omg.svg#icon-f1antenna"></use>
+                                </svg>
+                            </div>
                             <h3 class="title">Внимание к деталям</h3>
                             <p class="feature-text">
                                 Идейные соображения, а также начало повседневной работы по формированию позиции.
                             </p>
                         </li>
                         <li>
+                            <div class="feature-iconbox">
+                                <svg class="feature-icon" width="70px" height="70px">
+                                    <use href="./images/sprite.omg.svg#icon-f2clock"></use>
+                                </svg>
+                            </div>
                             <h3 class="title">Пунктуальность</h3>
                             <p class="feature-text">
                                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                             </p>
                         </li>
                         <li>
+                            <div class="feature-iconbox">
+                                <svg class="feature-icon" width="70px" height="70px">
+                                    <use href="./images/sprite.omg.svg#icon-f3diagram"></use>
+                                </svg>
+                            </div>
                             <h3 class="title">Планирование</h3>
                             <p class="feature-text">
                                 Равным образом консультация с широким активом в значительной степени обуславливает.
                             </p>
                         </li>
                         <li>
+                            <div class="feature-iconbox">
+                                <svg class="feature-icon" width="70px" height="70px">
+                                    <use href="./images/sprite.omg.svg#icon-f4astronaut"></use>
+                                </svg>
+                            </div>
                             <h3 class="title">Современные технологии</h3>
                             <p class="feature-text">
                                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -119,6 +153,36 @@
                             <div class="team-member">
                                 <h3 class="team-title">Игорь Демьяненко</h3>
                                 <p class="team-text">Product Designer</p>
+                                <ul class="social-list">
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s1instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s2twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s3facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s4linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                         <li class="team-item">
@@ -126,6 +190,36 @@
                             <div class="team-member">
                                 <h3 class="team-title">Ольга Репина</h3>
                                 <p class="team-text">Frontend Developer</p>
+                                <ul class="social-list">
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s1instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s2twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s3facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s4linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                         <li class="team-item">
@@ -133,6 +227,36 @@
                             <div class="team-member">
                                 <h3 class="team-title">Николай Тарасов</h3>
                                 <p class="team-text">Marketing</p>
+                                <ul class="social-list">
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s1instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s2twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s3facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s4linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                         <li class="team-item">
@@ -140,7 +264,87 @@
                             <div class="team-member">
                                 <h3 class="team-title">Михаил Ермаков</h3>
                                 <p class="team-text">UI Designer</p>
+                                <ul class="social-list">
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s1instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s2twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s3facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-item">
+                                        <a class="social-link" href="">
+                                            <svg class="social-logo" width="20px" height="20px">
+                                                <use href="./images/sprite.omg.svg#icon-s4linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!--regular customers-->
+            <section class="section">
+                <div class="container">
+                    <h2 class="section-title">Постоянные клиенты</h2>
+                    <ul class="client-list">
+                        <li class="client-item">
+                            <a class="client-link" href="">
+                                <svg class="client-logo" width="106px" height="60px">
+                                    <use href="./images/sprite.omg.svg#icon-clientlogo1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="client-item">
+                            <a class="client-link" href="">
+                                <svg class="client-logo" width="106px" height="60px">
+                                    <use href="./images/sprite.omg.svg#icon-clientlogo2"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="client-item">
+                            <a class="client-link" href="">
+                                <svg class="client-logo" width="106px" height="60px">
+                                    <use href="./images/sprite.omg.svg#icon-clientlogo3"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="client-item">
+                            <a class="client-link" href="">
+                                <svg class="client-logo" width="106px" height="60px">
+                                    <use href="./images/sprite.omg.svg#icon-clientlogo4"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="client-item">
+                            <a class="client-link" href="">
+                                <svg class="client-logo" width="106px" height="60px">
+                                    <use href="./images/sprite.omg.svg#icon-clientlogo5"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="client-item">
+                            <a class="client-link" href="">
+                                <svg class="client-logo" width="106px" height="60px">
+                                    <use href="./images/sprite.omg.svg#icon-clientlogo6"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -148,8 +352,8 @@
         </main>
         <!-- footer -->
         <footer class="section-last">
-            <div class="container">
-                <div class="footer-card">
+            <div class="container container-footer">
+                <div class="footer-card-left">
                     <a class="logo" href="./index.html">Web<span class="accent-secondary">Studio</span></a>
                     <ul class="footer-raws">
                         <li class="footer-list">
@@ -160,6 +364,39 @@
                         </li>
                         <li class="footer-list">
                             <a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-card-right">
+                    <h3 class="footer-title2">присоединяйтесь</h3>
+                    <ul class="social-list">
+                        <li class="social-item footer-social-item">
+                            <a class="footer-social-link" href="">
+                                <svg class="social-logo" width="20px" height="20px">
+                                    <use href="./images/sprite.omg.svg#icon-s1instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item footer-social-item">
+                            <a class="footer-social-link" href="">
+                                <svg class="social-logo" width="20px" height="20px">
+                                    <use href="./images/sprite.omg.svg#icon-s2twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item footer-social-item">
+                            <a class="footer-social-link" href="">
+                                <svg class="social-logo" width="20px" height="20px">
+                                    <use href="./images/sprite.omg.svg#icon-s3facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item footer-social-item">
+                            <a class="footer-social-link" href="">
+                                <svg class="social-logo" width="20px" height="20px">
+                                    <use href="./images/sprite.omg.svg#icon-s4linkedin"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
                 </div>
