Исправила правки по ДЗ4

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </nav>
                 <ul class="auth-nav">
                     <li class="auth-nav-item">
-                        <a class="auth-nav-link" href="" info@devstudio.com>
+                        <a class="auth-nav-link" href="">
                             <svg class="btn-mail" width="16px" height="12px">
                                 <use href="./images/sprite.omg.svg#icon-mail"></use>
                             </svg>
@@ -372,28 +372,28 @@
                     <ul class="social-list">
                         <li class="social-item footer-social-item">
                             <a class="footer-social-link" href="">
-                                <svg class="social-logo" width="20px" height="20px">
+                                <svg class="footer-social-logo" width="20px" height="20px">
                                     <use href="./images/sprite.omg.svg#icon-s1instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item footer-social-item">
                             <a class="footer-social-link" href="">
-                                <svg class="social-logo" width="20px" height="20px">
+                                <svg class="footer-social-logo" width="20px" height="20px">
                                     <use href="./images/sprite.omg.svg#icon-s2twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item footer-social-item">
                             <a class="footer-social-link" href="">
-                                <svg class="social-logo" width="20px" height="20px">
+                                <svg class="footer-social-logo" width="20px" height="20px">
                                     <use href="./images/sprite.omg.svg#icon-s3facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item footer-social-item">
                             <a class="footer-social-link" href="">
-                                <svg class="social-logo" width="20px" height="20px">
+                                <svg class="footer-social-logo" width="20px" height="20px">
                                     <use href="./images/sprite.omg.svg#icon-s4linkedin"></use>
                                 </svg>
                             </a>
