--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
                 </nav>
                 <ul class="auth-nav">
                     <li class="auth-nav-item">
-                        <a class="auth-nav-link" href="" info@devstudio.com>
+                        <a class="auth-nav-link" href="">
                             <svg class="btn-mail" width="16px" height="12px">
                                 <use href="./images/sprite.omg.svg#icon-mail"></use>
                             </svg>
@@ -49,8 +49,8 @@
                         >
                     </li>
                 </ul>
+            </div>
         </header>
-
         <main>
             <!-- Work examples -->
             <section class="section">
@@ -148,7 +148,7 @@
             </section>
         </main>
         <!-- footer -->
-<footer class="section-last">
+        <footer class="section-last">
             <div class="container container-footer">
                 <div class="footer-card-left">
                     <a class="logo" href="./index.html">Web<span class="accent-secondary">Studio</span></a>
@@ -169,28 +169,28 @@
                     <ul class="social-list">
                         <li class="social-item footer-social-item">
                             <a class="footer-social-link" href="">
-                                <svg class="social-logo" width="20px" height="20px">
+                                <svg class="footer-social-logo" width="20px" height="20px">
                                     <use href="./images/sprite.omg.svg#icon-s1instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item footer-social-item">
                             <a class="footer-social-link" href="">
-                                <svg class="social-logo" width="20px" height="20px">
+                                <svg class="footer-social-logo" width="20px" height="20px">
                                     <use href="./images/sprite.omg.svg#icon-s2twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item footer-social-item">
                             <a class="footer-social-link" href="">
-                                <svg class="social-logo" width="20px" height="20px">
+                                <svg class="footer-social-logo" width="20px" height="20px">
                                     <use href="./images/sprite.omg.svg#icon-s3facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item footer-social-item">
                             <a class="footer-social-link" href="">
-                                <svg class="social-logo" width="20px" height="20px">
+                                <svg class="footer-social-logo" width="20px" height="20px">
                                     <use href="./images/sprite.omg.svg#icon-s4linkedin"></use>
                                 </svg>
                             </a>
