--- a/portfolio.html
+++ b/portfolio.html
@@ -66,78 +66,159 @@
                     <!--Work-cards-->
                     <ul class="work-card">
                         <li class="work-card-item">
-                            <img
-                                class="work-card-img"
-                                src="./images/img1.jpg"
-                                width="370"
-                                alt="Ноутбук открыт на веб-странице"
-                            />
+                            <div class="work-card-cont">
+                                <img
+                                    class="work-card-img"
+                                    src="./images/img1.jpg"
+                                    width="370"
+                                    alt="Ноутбук открыт на веб-странице"
+                                />
+                                <div class="work-card-opacity">
+                                    <p class="work-opacity-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                        конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="port-card">
                                 <h3 class="portfolio-title">Технокряк</h3>
                                 <p class="portfolio-work-title">Веб-сайт</p>
                             </div>
                         </li>
                         <li class="work-card-item">
-                            <img class="work-card-img" src="./images/img2.jpg" width="370" alt="Игра в бскетбол" />
+                            <div class="work-card-cont">
+                                <img class="work-card-img" src="./images/img2.jpg" width="370" alt="Игра в бскетбол" />
+                                <div class="work-card-opacity">
+                                    <p class="work-opacity-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                        конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="port-card">
                                 <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
                                 <p class="portfolio-work-title">Дизайн</p>
                             </div>
                         </li>
                         <li class="work-card-item">
-                            <img
-                                class="work-card-img"
-                                src="./images/img3.jpg"
-                                width="370"
-                                alt="Логотип рыбного ресторана"
-                            />
+                            <div class="work-card-cont">
+                                <img
+                                    class="work-card-img"
+                                    src="./images/img3.jpg"
+                                    width="370"
+                                    alt="Логотип рыбного ресторана"
+                                />
+                                <div class="work-card-opacity">
+                                    <p class="work-opacity-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                        конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="port-card">
                                 <h3 class="portfolio-title">Ресторан Seafood</h3>
                                 <p class="portfolio-work-title">Приложение</p>
                             </div>
                         </li>
                         <li class="work-card-item">
-                            <img class="work-card-img" src="./images/img4.jpg" width="370" alt="Наушники" />
+                            <div class="work-card-cont">
+                                <img class="work-card-img" src="./images/img4.jpg" width="370" alt="Наушники" />
+                                <div class="work-card-opacity">
+                                    <p class="work-opacity-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                        конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="port-card">
                                 <h3 class="portfolio-title">Проект Prime</h3>
                                 <p class="portfolio-work-title">Маркетинг</p>
                             </div>
                         </li>
                         <li class="work-card-item">
-                            <img class="work-card-img" src="./images/img5.jpg" width="370" alt="Две коробки" />
+                            <div class="work-card-cont">
+                                <img class="work-card-img" src="./images/img5.jpg" width="370" alt="Две коробки" />
+                                <div class="work-card-opacity">
+                                    <p class="work-opacity-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                        конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="port-card">
                                 <h3 class="portfolio-title">Проект Boxes</h3>
                                 <p class="portfolio-work-title">Приложение</p>
                             </div>
                         </li>
                         <li class="work-card-item">
-                            <img class="work-card-img" src="./images/img6.jpg" width="370" alt="ПК" />
+                            <div class="work-card-cont">
+                                <img class="work-card-img" src="./images/img6.jpg" width="370" alt="ПК" />
+                                <div class="work-card-opacity">
+                                    <p class="work-opacity-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                        конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="port-card">
                                 <h3 class="portfolio-title">Inspiration has no Borders</h3>
                                 <p class="portfolio-work-title">Веб-сайт</p>
                             </div>
                         </li>
                         <li class="work-card-item">
-                            <img class="work-card-img" src="./images/img7.jpg" width="370" alt="Книга" />
+                            <div class="work-card-cont">
+                                <img class="work-card-img" src="./images/img7.jpg" width="370" alt="Книга" />
+                                <div class="work-card-opacity">
+                                    <p class="work-opacity-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                        конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="port-card">
                                 <h3 class="portfolio-title">Издание Limited Edition</h3>
                                 <p class="portfolio-work-title">Дизайн</p>
                             </div>
                         </li>
                         <li class="work-card-item">
-                            <img class="work-card-img" src="./images/img8.jpg" width="370" alt="Логотип" />
+                            <div class="work-card-cont">
+                                <img class="work-card-img" src="./images/img8.jpg" width="370" alt="Логотип" />
+                                <div class="work-card-opacity">
+                                    <p class="work-opacity-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                        конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="port-card">
                                 <h3 class="portfolio-title">Проект LAB</h3>
                                 <p class="portfolio-work-title">Маркетинг</p>
                             </div>
                         </li>
                         <li class="work-card-item">
-                            <img
-                                class="work-card-img"
-                                src="./images/img9.jpg"
-                                width="370"
-                                alt="Мужчина работает за ноутбуком"
-                            />
+                            <div class="work-card-cont">
+                                <img
+                                    class="work-card-img"
+                                    src="./images/img9.jpg"
+                                    width="370"
+                                    alt="Мужчина работает за ноутбуком"
+                                />
+                                <div class="work-card-opacity">
+                                    <p class="work-opacity-text">
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                                        конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="port-card">
                                 <h3 class="portfolio-title">Growing Business</h3>
                                 <p class="portfolio-work-title">Приложение</p>
