--- a/portfolio.html
+++ b/portfolio.html
@@ -245,7 +245,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer-card-right">
+                <div class="footer-card-center">
                     <h3 class="footer-title2">присоединяйтесь</h3>
                     <ul class="social-list">
                         <li class="social-item footer-social-item">
@@ -277,6 +277,22 @@
                             </a>
                         </li>
                     </ul>
+                </div>
+                <div class="footer-card-right">
+                    <div class="footer-card-right1">
+                        <h3 class="footer-title2 footer-title2a">Подпишитесь на рассылку</h3>
+                        <form name="submit">
+                            <label class="submit-label">
+                                <input class="submit-input" type="email" name="submit-email" placeholder="E-mail" />
+                            </label>
+                        </form>
+                    </div>
+                    <div class="footer-card-right2">
+                        <button class="btn-submit" type="button">Подписаться</button>
+                        <svg class="icon-send" width="24px" height="24px">
+                            <use href="./images/sprite.omg.svg#icon-send"></use>
+                        </svg>
+                    </div>
                 </div>
             </div>
         </footer>
