--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
                     <li class="auth-nav-item">
                         <a class="auth-nav-link" href="">
                             <svg class="btn-mail" width="16px" height="12px">
-                                <use href="./images/sprite.omg.svg#icon-mail"></use>
+                                <use href="./images/icons.svg#icon-mail"></use>
                             </svg>
                             info@devstudio.com</a
                         >
@@ -43,7 +43,7 @@
                     <li class="auth-nav-item">
                         <a class="auth-nav-link" href="">
                             <svg class="btn-phone" width="10px" height="16px">
-                                <use href="./images/sprite.omg.svg#icon-smartphone"></use>
+                                <use href="./images/icons.svg#icon-smartphone"></use>
                             </svg>
                             +38 096 111 11 11</a
                         >
@@ -251,28 +251,28 @@
                         <li class="social-item footer-social-item">
                             <a class="footer-social-link" href="">
                                 <svg class="footer-social-logo" width="20px" height="20px">
-                                    <use href="./images/sprite.omg.svg#icon-s1instagram"></use>
+                                    <use href="./images/icons.svg#icon-s1instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item footer-social-item">
                             <a class="footer-social-link" href="">
                                 <svg class="footer-social-logo" width="20px" height="20px">
-                                    <use href="./images/sprite.omg.svg#icon-s2twitter"></use>
+                                    <use href="./images/icons.svg#icon-s2twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item footer-social-item">
                             <a class="footer-social-link" href="">
                                 <svg class="footer-social-logo" width="20px" height="20px">
-                                    <use href="./images/sprite.omg.svg#icon-s3facebook"></use>
+                                    <use href="./images/icons.svg#icon-s3facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item footer-social-item">
                             <a class="footer-social-link" href="">
                                 <svg class="footer-social-logo" width="20px" height="20px">
-                                    <use href="./images/sprite.omg.svg#icon-s4linkedin"></use>
+                                    <use href="./images/icons.svg#icon-s4linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -281,7 +281,7 @@
                 <div class="footer-card-right">
                     <div class="footer-card-right1">
                         <h3 class="footer-title2 footer-title2a">Подпишитесь на рассылку</h3>
-                        <form name="submit">
+                        <form class="footer-form" name="submit">
                             <label class="submit-label">
                                 <input class="submit-input" type="email" name="submit-email" placeholder="E-mail" />
                             </label>
@@ -290,7 +290,7 @@
                     <div class="footer-card-right2">
                         <button class="btn-submit" type="button">Подписаться</button>
                         <svg class="icon-send" width="24px" height="24px">
-                            <use href="./images/sprite.omg.svg#icon-send"></use>
+                            <use href="./images/icons.svg#icon-send"></use>
                         </svg>
                     </div>
                 </div>
