--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                     <use href="./images/icons.svg#icon-btn-close"></use>
                                 </svg>
                             </button>
-                            <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
+                            <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
                             <form class="form-modal">
                                 <div class="form-person">
                                     <label for="person" class="form-label">Имя</label>
@@ -117,10 +117,7 @@
                                         <a class="form-a" href=""> Условия договора</a>
                                     </label>
                                 </div>
-                                <div class="btn-form-close">
-                                    <button class="form-close" type="submit">Отправить</button>
-                                </div>
-                                <span class="aaa"></span>
+                                <button class="form-close" type="submit">Отправить</button>
                             </form>
                         </div>
                     </div>
@@ -455,7 +452,7 @@
                     </ul>
                 </div>
                 <div class="footer-card-center">
-                    <h3 class="footer-title2">присоединяйтесь</h3>
+                    <h3 class="footer-title-ctr">присоединяйтесь</h3>
                     <ul class="social-list">
                         <li class="social-item footer-social-item">
                             <a class="footer-social-link" href="">
@@ -488,19 +485,19 @@
                     </ul>
                 </div>
                 <div class="footer-card-right">
+                    <h3 class="footer-title-right">Подпишитесь на рассылку</h3>
                     <div class="footer-card-right1">
-                        <h3 class="footer-title2 footer-title2a">Подпишитесь на рассылку</h3>
                         <form class="footer-form" name="submit">
                             <label class="submit-label">
                                 <input class="submit-input" type="email" name="submit-email" placeholder="E-mail" />
                             </label>
                         </form>
-                    </div>
-                    <div class="footer-card-right2">
-                        <button class="btn-submit" type="button">Подписаться</button>
-                        <svg class="icon-send" width="24px" height="24px">
-                            <use href="./images/icons.svg#icon-send"></use>
-                        </svg>
+                        <button class="btn-submit" type="button">
+                            Подписаться
+                            <svg class="icon-send" width="24px" height="24px">
+                                <use href="./images/icons.svg#icon-send"></use>
+                            </svg>
+                        </button>
                     </div>
                 </div>
             </div>
